--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.8.11"
+    "mongoose": "^5.8.11",
+    "multer": "^1.4.2"
   }
 }
